assignment 4/mad_parser.output
Terminals unused in grammar

   FOR
   PRINT
   READ
   TERMINAL
   VALUE


State 17 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 78 conflicts: 3 shift/reduce
State 93 conflicts: 1 shift/reduce
State 95 conflicts: 3 shift/reduce
State 108 conflicts: 3 shift/reduce
State 109 conflicts: 3 shift/reduce
State 110 conflicts: 3 shift/reduce
State 111 conflicts: 3 shift/reduce
State 113 conflicts: 3 shift/reduce
State 114 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: mad_program NONTERMINAL

    1 mad_program: supported_declarations
    2            | supported_declarations mad_program
    3            | error '\n'

    4 supported_declarations: variable_declarations
    5                       | function_declarations

    6 variable_declarations: variable_definitions SEMI
    7                      | variable_definitions error

    8 variable_definitions: dtype var_decl
    9                     | variable_definitions COMMA var_decl
   10                     | variable_definitions error var_decl '\n'

   11 dtype: DTYPE_INT
   12      | DTYPE_BOOL
   13      | DTYPE_FLOAT
   14      | DTYPE_CHAR
   15      | error

   16 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN statement_block
   17                      | VOID ID OPENPAREN argument_list CLOSEPAREN statement_block

   18 argument_list: dtype var_decl COMMA argument_list
   19              | dtype ID
   20              | %empty
   21              | dtype ID error argument_list
   22              | dtype error COMMA argument_list

   23 statement_block: OPENCURLY variable_list statement_list CLOSECURLY
   24                | OPENCURLY variable_list statement_list error

   25 variable_list: %empty
   26              | variable_declarations variable_list

   27 statement_list: %empty
   28               | supported_statement statement_list

   29 supported_statement: alr_subexpression SEMI
   30                    | if_statement
   31                    | while_statement
   32                    | return_statement
   33                    | statement_block
   34                    | alr_subexpression error

   35 if_statement: IF OPENPAREN alr_subexpression CLOSEPAREN statement_block else_statement

   36 else_statement: %empty
   37               | ELSE supported_statement

   38 while_statement: WHILE OPENPAREN alr_subexpression CLOSEPAREN

   39 return_statement: RETURN SEMI
   40                 | RETURN alr_subexpression SEMI
   41                 | RETURN error
   42                 | RETURN alr_subexpression error

   43 alr_subexpression: var_use EQ alr_subexpression
   44                  | supported_constant
   45                  | var_use
   46                  | ID OPENPAREN id_list CLOSEPAREN
   47                  | OPENPAREN alr_subexpression CLOSEPAREN
   48                  | alr_subexpression ARITH alr_subexpression
   49                  | OPENNEGATE alr_subexpression CLOSEPAREN
   50                  | alr_subexpression RELN alr_subexpression
   51                  | alr_subexpression LOGICAL alr_subexpression
   52                  | LOGICALNOT alr_subexpression
   53                  | error EQ alr_subexpression
   54                  | var_use error alr_subexpression
   55                  | var_use OPENPAREN id_list error

   56 id_list: var_use COMMA id_list
   57        | var_use
   58        | %empty
   59        | error COMMA id_list

   60 var_decl: ID
   61         | ID OPENSQUARE INTCONST CLOSESQUARE

   62 var_use: ID
   63        | ID OPENSQUARE INTCONST CLOSESQUARE

   64 supported_constant: INTCONST
   65                   | BOOLCONST
   66                   | OPENNEGATE INTCONST CLOSEPAREN


Terminals, with rules where they appear

NONTERMINAL (0) 0
TERMINAL (1)
VALUE (2)
'\n' (10) 3 10
error (256) 3 7 10 15 21 22 24 34 41 42 53 54 55 59
ID (258) 16 17 19 21 46 60 61 62 63
COMMA (259) 9 18 22 56 59
SEMI (260) 6 29 39 40
OPENPAREN (261) 16 17 35 38 46 47 55
CLOSEPAREN (262) 16 17 35 38 46 47 49 66
OPENCURLY (263) 23 24
CLOSECURLY (264) 23
OPENSQUARE (265) 61 63
CLOSESQUARE (266) 61 63
OPENNEGATE (267) 49 66
VOID (268) 17
DTYPE_INT (269) 11
DTYPE_BOOL (270) 12
DTYPE_FLOAT (271) 13
DTYPE_CHAR (272) 14
EQ (273) 43 53
ARITH (274) 48
RELN (275) 50
LOGICAL (276) 51
LOGICALNOT (277) 52
IF (278) 35
ELSE (279) 37
WHILE (280) 38
FOR (281)
RETURN (282) 39 40 41 42
PRINT (283)
READ (284)
BOOLCONST (285) 65
INTCONST (286) 61 63 64 66


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
mad_program (36)
    on left: 1 2 3, on right: 0 2
supported_declarations (37)
    on left: 4 5, on right: 1 2
variable_declarations (38)
    on left: 6 7, on right: 4 26
variable_definitions (39)
    on left: 8 9 10, on right: 6 7 9 10
dtype (40)
    on left: 11 12 13 14 15, on right: 8 16 18 19 21 22
function_declarations (41)
    on left: 16 17, on right: 5
argument_list (42)
    on left: 18 19 20 21 22, on right: 16 17 18 21 22
statement_block (43)
    on left: 23 24, on right: 16 17 33 35
variable_list (44)
    on left: 25 26, on right: 23 24 26
statement_list (45)
    on left: 27 28, on right: 23 24 28
supported_statement (46)
    on left: 29 30 31 32 33 34, on right: 28 37
if_statement (47)
    on left: 35, on right: 30
else_statement (48)
    on left: 36 37, on right: 35
while_statement (49)
    on left: 38, on right: 31
return_statement (50)
    on left: 39 40 41 42, on right: 32
alr_subexpression (51)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55, on right: 29 34
    35 38 40 42 43 47 48 49 50 51 52 53 54
id_list (52)
    on left: 56 57 58 59, on right: 46 55 56 59
var_decl (53)
    on left: 60 61, on right: 8 9 10 18
var_use (54)
    on left: 62 63, on right: 43 45 54 55 56 57
supported_constant (55)
    on left: 64 65 66, on right: 44


State 0

    0 $accept: . mad_program NONTERMINAL

    error        shift, and go to state 1
    VOID         shift, and go to state 2
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    mad_program             go to state 7
    supported_declarations  go to state 8
    variable_declarations   go to state 9
    variable_definitions    go to state 10
    dtype                   go to state 11
    function_declarations   go to state 12


State 1

    3 mad_program: error . '\n'
   15 dtype: error .

    '\n'  shift, and go to state 13

    $default  reduce using rule 15 (dtype)


State 2

   17 function_declarations: VOID . ID OPENPAREN argument_list CLOSEPAREN statement_block

    ID  shift, and go to state 14


State 3

   11 dtype: DTYPE_INT .

    $default  reduce using rule 11 (dtype)


State 4

   12 dtype: DTYPE_BOOL .

    $default  reduce using rule 12 (dtype)


State 5

   13 dtype: DTYPE_FLOAT .

    $default  reduce using rule 13 (dtype)


State 6

   14 dtype: DTYPE_CHAR .

    $default  reduce using rule 14 (dtype)


State 7

    0 $accept: mad_program . NONTERMINAL

    NONTERMINAL  shift, and go to state 15


State 8

    1 mad_program: supported_declarations .
    2            | supported_declarations . mad_program

    error        shift, and go to state 1
    VOID         shift, and go to state 2
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    NONTERMINAL  reduce using rule 1 (mad_program)

    mad_program             go to state 16
    supported_declarations  go to state 8
    variable_declarations   go to state 9
    variable_definitions    go to state 10
    dtype                   go to state 11
    function_declarations   go to state 12


State 9

    4 supported_declarations: variable_declarations .

    $default  reduce using rule 4 (supported_declarations)


State 10

    6 variable_declarations: variable_definitions . SEMI
    7                      | variable_definitions . error
    9 variable_definitions: variable_definitions . COMMA var_decl
   10                     | variable_definitions . error var_decl '\n'

    error  shift, and go to state 17
    COMMA  shift, and go to state 18
    SEMI   shift, and go to state 19


State 11

    8 variable_definitions: dtype . var_decl
   16 function_declarations: dtype . ID OPENPAREN argument_list CLOSEPAREN statement_block

    ID  shift, and go to state 20

    var_decl  go to state 21


State 12

    5 supported_declarations: function_declarations .

    $default  reduce using rule 5 (supported_declarations)


State 13

    3 mad_program: error '\n' .

    $default  reduce using rule 3 (mad_program)


State 14

   17 function_declarations: VOID ID . OPENPAREN argument_list CLOSEPAREN statement_block

    OPENPAREN  shift, and go to state 22


State 15

    0 $accept: mad_program NONTERMINAL .

    $default  accept


State 16

    2 mad_program: supported_declarations mad_program .

    $default  reduce using rule 2 (mad_program)


State 17

    7 variable_declarations: variable_definitions error .
   10 variable_definitions: variable_definitions error . var_decl '\n'

    ID  shift, and go to state 23

    ID        [reduce using rule 7 (variable_declarations)]
    $default  reduce using rule 7 (variable_declarations)

    var_decl  go to state 24


State 18

    9 variable_definitions: variable_definitions COMMA . var_decl

    ID  shift, and go to state 23

    var_decl  go to state 25


State 19

    6 variable_declarations: variable_definitions SEMI .

    $default  reduce using rule 6 (variable_declarations)


State 20

   16 function_declarations: dtype ID . OPENPAREN argument_list CLOSEPAREN statement_block
   60 var_decl: ID .
   61         | ID . OPENSQUARE INTCONST CLOSESQUARE

    OPENPAREN   shift, and go to state 26
    OPENSQUARE  shift, and go to state 27

    $default  reduce using rule 60 (var_decl)


State 21

    8 variable_definitions: dtype var_decl .

    $default  reduce using rule 8 (variable_definitions)


State 22

   17 function_declarations: VOID ID OPENPAREN . argument_list CLOSEPAREN statement_block

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    CLOSEPAREN  reduce using rule 20 (argument_list)

    dtype          go to state 29
    argument_list  go to state 30


State 23

   60 var_decl: ID .
   61         | ID . OPENSQUARE INTCONST CLOSESQUARE

    OPENSQUARE  shift, and go to state 27

    $default  reduce using rule 60 (var_decl)


State 24

   10 variable_definitions: variable_definitions error var_decl . '\n'

    '\n'  shift, and go to state 31


State 25

    9 variable_definitions: variable_definitions COMMA var_decl .

    $default  reduce using rule 9 (variable_definitions)


State 26

   16 function_declarations: dtype ID OPENPAREN . argument_list CLOSEPAREN statement_block

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    CLOSEPAREN  reduce using rule 20 (argument_list)

    dtype          go to state 29
    argument_list  go to state 32


State 27

   61 var_decl: ID OPENSQUARE . INTCONST CLOSESQUARE

    INTCONST  shift, and go to state 33


State 28

   15 dtype: error .

    $default  reduce using rule 15 (dtype)


State 29

   18 argument_list: dtype . var_decl COMMA argument_list
   19              | dtype . ID
   21              | dtype . ID error argument_list
   22              | dtype . error COMMA argument_list

    error  shift, and go to state 34
    ID     shift, and go to state 35

    var_decl  go to state 36


State 30

   17 function_declarations: VOID ID OPENPAREN argument_list . CLOSEPAREN statement_block

    CLOSEPAREN  shift, and go to state 37


State 31

   10 variable_definitions: variable_definitions error var_decl '\n' .

    $default  reduce using rule 10 (variable_definitions)


State 32

   16 function_declarations: dtype ID OPENPAREN argument_list . CLOSEPAREN statement_block

    CLOSEPAREN  shift, and go to state 38


State 33

   61 var_decl: ID OPENSQUARE INTCONST . CLOSESQUARE

    CLOSESQUARE  shift, and go to state 39


State 34

   22 argument_list: dtype error . COMMA argument_list

    COMMA  shift, and go to state 40


State 35

   19 argument_list: dtype ID .
   21              | dtype ID . error argument_list
   60 var_decl: ID .
   61         | ID . OPENSQUARE INTCONST CLOSESQUARE

    error       shift, and go to state 41
    OPENSQUARE  shift, and go to state 27

    COMMA       reduce using rule 60 (var_decl)
    CLOSEPAREN  reduce using rule 19 (argument_list)


State 36

   18 argument_list: dtype var_decl . COMMA argument_list

    COMMA  shift, and go to state 42


State 37

   17 function_declarations: VOID ID OPENPAREN argument_list CLOSEPAREN . statement_block

    OPENCURLY  shift, and go to state 43

    statement_block  go to state 44


State 38

   16 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN . statement_block

    OPENCURLY  shift, and go to state 43

    statement_block  go to state 45


State 39

   61 var_decl: ID OPENSQUARE INTCONST CLOSESQUARE .

    $default  reduce using rule 61 (var_decl)


State 40

   22 argument_list: dtype error COMMA . argument_list

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    CLOSEPAREN  reduce using rule 20 (argument_list)

    dtype          go to state 29
    argument_list  go to state 46


State 41

   21 argument_list: dtype ID error . argument_list

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    CLOSEPAREN  reduce using rule 20 (argument_list)

    dtype          go to state 29
    argument_list  go to state 47


State 42

   18 argument_list: dtype var_decl COMMA . argument_list

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    CLOSEPAREN  reduce using rule 20 (argument_list)

    dtype          go to state 29
    argument_list  go to state 48


State 43

   23 statement_block: OPENCURLY . variable_list statement_list CLOSECURLY
   24                | OPENCURLY . variable_list statement_list error

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    error       [reduce using rule 25 (variable_list)]
    ID          reduce using rule 25 (variable_list)
    OPENPAREN   reduce using rule 25 (variable_list)
    OPENCURLY   reduce using rule 25 (variable_list)
    CLOSECURLY  reduce using rule 25 (variable_list)
    OPENNEGATE  reduce using rule 25 (variable_list)
    LOGICALNOT  reduce using rule 25 (variable_list)
    IF          reduce using rule 25 (variable_list)
    WHILE       reduce using rule 25 (variable_list)
    RETURN      reduce using rule 25 (variable_list)
    BOOLCONST   reduce using rule 25 (variable_list)
    INTCONST    reduce using rule 25 (variable_list)

    variable_declarations  go to state 49
    variable_definitions   go to state 10
    dtype                  go to state 50
    variable_list          go to state 51


State 44

   17 function_declarations: VOID ID OPENPAREN argument_list CLOSEPAREN statement_block .

    $default  reduce using rule 17 (function_declarations)


State 45

   16 function_declarations: dtype ID OPENPAREN argument_list CLOSEPAREN statement_block .

    $default  reduce using rule 16 (function_declarations)


State 46

   22 argument_list: dtype error COMMA argument_list .

    $default  reduce using rule 22 (argument_list)


State 47

   21 argument_list: dtype ID error argument_list .

    $default  reduce using rule 21 (argument_list)


State 48

   18 argument_list: dtype var_decl COMMA argument_list .

    $default  reduce using rule 18 (argument_list)


State 49

   26 variable_list: variable_declarations . variable_list

    error        shift, and go to state 28
    DTYPE_INT    shift, and go to state 3
    DTYPE_BOOL   shift, and go to state 4
    DTYPE_FLOAT  shift, and go to state 5
    DTYPE_CHAR   shift, and go to state 6

    error       [reduce using rule 25 (variable_list)]
    ID          reduce using rule 25 (variable_list)
    OPENPAREN   reduce using rule 25 (variable_list)
    OPENCURLY   reduce using rule 25 (variable_list)
    CLOSECURLY  reduce using rule 25 (variable_list)
    OPENNEGATE  reduce using rule 25 (variable_list)
    LOGICALNOT  reduce using rule 25 (variable_list)
    IF          reduce using rule 25 (variable_list)
    WHILE       reduce using rule 25 (variable_list)
    RETURN      reduce using rule 25 (variable_list)
    BOOLCONST   reduce using rule 25 (variable_list)
    INTCONST    reduce using rule 25 (variable_list)

    variable_declarations  go to state 49
    variable_definitions   go to state 10
    dtype                  go to state 50
    variable_list          go to state 52


State 50

    8 variable_definitions: dtype . var_decl

    ID  shift, and go to state 23

    var_decl  go to state 21


State 51

   23 statement_block: OPENCURLY variable_list . statement_list CLOSECURLY
   24                | OPENCURLY variable_list . statement_list error

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENCURLY   shift, and go to state 43
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    IF          shift, and go to state 58
    WHILE       shift, and go to state 59
    RETURN      shift, and go to state 60
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    error       [reduce using rule 27 (statement_list)]
    CLOSECURLY  reduce using rule 27 (statement_list)

    statement_block      go to state 63
    statement_list       go to state 64
    supported_statement  go to state 65
    if_statement         go to state 66
    while_statement      go to state 67
    return_statement     go to state 68
    alr_subexpression    go to state 69
    var_use              go to state 70
    supported_constant   go to state 71


State 52

   26 variable_list: variable_declarations variable_list .

    $default  reduce using rule 26 (variable_list)


State 53

   53 alr_subexpression: error . EQ alr_subexpression

    EQ  shift, and go to state 72


State 54

   46 alr_subexpression: ID . OPENPAREN id_list CLOSEPAREN
   62 var_use: ID .
   63        | ID . OPENSQUARE INTCONST CLOSESQUARE

    OPENPAREN   shift, and go to state 73
    OPENSQUARE  shift, and go to state 74

    OPENPAREN  [reduce using rule 62 (var_use)]
    $default   reduce using rule 62 (var_use)


State 55

   47 alr_subexpression: OPENPAREN . alr_subexpression CLOSEPAREN

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 75
    var_use             go to state 70
    supported_constant  go to state 71


State 56

   49 alr_subexpression: OPENNEGATE . alr_subexpression CLOSEPAREN
   66 supported_constant: OPENNEGATE . INTCONST CLOSEPAREN

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 76

    alr_subexpression   go to state 77
    var_use             go to state 70
    supported_constant  go to state 71


State 57

   52 alr_subexpression: LOGICALNOT . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 78
    var_use             go to state 70
    supported_constant  go to state 71


State 58

   35 if_statement: IF . OPENPAREN alr_subexpression CLOSEPAREN statement_block else_statement

    OPENPAREN  shift, and go to state 79


State 59

   38 while_statement: WHILE . OPENPAREN alr_subexpression CLOSEPAREN

    OPENPAREN  shift, and go to state 80


State 60

   39 return_statement: RETURN . SEMI
   40                 | RETURN . alr_subexpression SEMI
   41                 | RETURN . error
   42                 | RETURN . alr_subexpression error

    error       shift, and go to state 81
    ID          shift, and go to state 54
    SEMI        shift, and go to state 82
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 83
    var_use             go to state 70
    supported_constant  go to state 71


State 61

   65 supported_constant: BOOLCONST .

    $default  reduce using rule 65 (supported_constant)


State 62

   64 supported_constant: INTCONST .

    $default  reduce using rule 64 (supported_constant)


State 63

   33 supported_statement: statement_block .

    $default  reduce using rule 33 (supported_statement)


State 64

   23 statement_block: OPENCURLY variable_list statement_list . CLOSECURLY
   24                | OPENCURLY variable_list statement_list . error

    error       shift, and go to state 84
    CLOSECURLY  shift, and go to state 85


State 65

   28 statement_list: supported_statement . statement_list

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENCURLY   shift, and go to state 43
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    IF          shift, and go to state 58
    WHILE       shift, and go to state 59
    RETURN      shift, and go to state 60
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    error       [reduce using rule 27 (statement_list)]
    CLOSECURLY  reduce using rule 27 (statement_list)

    statement_block      go to state 63
    statement_list       go to state 86
    supported_statement  go to state 65
    if_statement         go to state 66
    while_statement      go to state 67
    return_statement     go to state 68
    alr_subexpression    go to state 69
    var_use              go to state 70
    supported_constant   go to state 71


State 66

   30 supported_statement: if_statement .

    $default  reduce using rule 30 (supported_statement)


State 67

   31 supported_statement: while_statement .

    $default  reduce using rule 31 (supported_statement)


State 68

   32 supported_statement: return_statement .

    $default  reduce using rule 32 (supported_statement)


State 69

   29 supported_statement: alr_subexpression . SEMI
   34                    | alr_subexpression . error
   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression

    error    shift, and go to state 87
    SEMI     shift, and go to state 88
    ARITH    shift, and go to state 89
    RELN     shift, and go to state 90
    LOGICAL  shift, and go to state 91


State 70

   43 alr_subexpression: var_use . EQ alr_subexpression
   45                  | var_use .
   54                  | var_use . error alr_subexpression
   55                  | var_use . OPENPAREN id_list error

    error      shift, and go to state 92
    OPENPAREN  shift, and go to state 93
    EQ         shift, and go to state 94

    error       [reduce using rule 45 (alr_subexpression)]
    SEMI        reduce using rule 45 (alr_subexpression)
    CLOSEPAREN  reduce using rule 45 (alr_subexpression)
    ARITH       reduce using rule 45 (alr_subexpression)
    RELN        reduce using rule 45 (alr_subexpression)
    LOGICAL     reduce using rule 45 (alr_subexpression)


State 71

   44 alr_subexpression: supported_constant .

    $default  reduce using rule 44 (alr_subexpression)


State 72

   53 alr_subexpression: error EQ . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 95
    var_use             go to state 70
    supported_constant  go to state 71


State 73

   46 alr_subexpression: ID OPENPAREN . id_list CLOSEPAREN

    error  shift, and go to state 96
    ID     shift, and go to state 97

    CLOSEPAREN  reduce using rule 58 (id_list)

    id_list  go to state 98
    var_use  go to state 99


State 74

   63 var_use: ID OPENSQUARE . INTCONST CLOSESQUARE

    INTCONST  shift, and go to state 100


State 75

   47 alr_subexpression: OPENPAREN alr_subexpression . CLOSEPAREN
   48                  | alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression

    CLOSEPAREN  shift, and go to state 101
    ARITH       shift, and go to state 89
    RELN        shift, and go to state 90
    LOGICAL     shift, and go to state 91


State 76

   64 supported_constant: INTCONST .
   66                   | OPENNEGATE INTCONST . CLOSEPAREN

    CLOSEPAREN  shift, and go to state 102

    CLOSEPAREN  [reduce using rule 64 (supported_constant)]
    $default    reduce using rule 64 (supported_constant)


State 77

   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   49                  | OPENNEGATE alr_subexpression . CLOSEPAREN
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression

    CLOSEPAREN  shift, and go to state 103
    ARITH       shift, and go to state 89
    RELN        shift, and go to state 90
    LOGICAL     shift, and go to state 91


State 78

   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression
   52                  | LOGICALNOT alr_subexpression .

    ARITH    shift, and go to state 89
    RELN     shift, and go to state 90
    LOGICAL  shift, and go to state 91

    ARITH     [reduce using rule 52 (alr_subexpression)]
    RELN      [reduce using rule 52 (alr_subexpression)]
    LOGICAL   [reduce using rule 52 (alr_subexpression)]
    $default  reduce using rule 52 (alr_subexpression)


State 79

   35 if_statement: IF OPENPAREN . alr_subexpression CLOSEPAREN statement_block else_statement

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 104
    var_use             go to state 70
    supported_constant  go to state 71


State 80

   38 while_statement: WHILE OPENPAREN . alr_subexpression CLOSEPAREN

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 105
    var_use             go to state 70
    supported_constant  go to state 71


State 81

   41 return_statement: RETURN error .
   53 alr_subexpression: error . EQ alr_subexpression

    EQ  shift, and go to state 72

    $default  reduce using rule 41 (return_statement)


State 82

   39 return_statement: RETURN SEMI .

    $default  reduce using rule 39 (return_statement)


State 83

   40 return_statement: RETURN alr_subexpression . SEMI
   42                 | RETURN alr_subexpression . error
   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression

    error    shift, and go to state 106
    SEMI     shift, and go to state 107
    ARITH    shift, and go to state 89
    RELN     shift, and go to state 90
    LOGICAL  shift, and go to state 91


State 84

   24 statement_block: OPENCURLY variable_list statement_list error .

    $default  reduce using rule 24 (statement_block)


State 85

   23 statement_block: OPENCURLY variable_list statement_list CLOSECURLY .

    $default  reduce using rule 23 (statement_block)


State 86

   28 statement_list: supported_statement statement_list .

    $default  reduce using rule 28 (statement_list)


State 87

   34 supported_statement: alr_subexpression error .

    $default  reduce using rule 34 (supported_statement)


State 88

   29 supported_statement: alr_subexpression SEMI .

    $default  reduce using rule 29 (supported_statement)


State 89

   48 alr_subexpression: alr_subexpression ARITH . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 108
    var_use             go to state 70
    supported_constant  go to state 71


State 90

   50 alr_subexpression: alr_subexpression RELN . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 109
    var_use             go to state 70
    supported_constant  go to state 71


State 91

   51 alr_subexpression: alr_subexpression LOGICAL . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 110
    var_use             go to state 70
    supported_constant  go to state 71


State 92

   54 alr_subexpression: var_use error . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 111
    var_use             go to state 70
    supported_constant  go to state 71


State 93

   55 alr_subexpression: var_use OPENPAREN . id_list error

    error  shift, and go to state 96
    ID     shift, and go to state 97

    error  [reduce using rule 58 (id_list)]

    id_list  go to state 112
    var_use  go to state 99


State 94

   43 alr_subexpression: var_use EQ . alr_subexpression

    error       shift, and go to state 53
    ID          shift, and go to state 54
    OPENPAREN   shift, and go to state 55
    OPENNEGATE  shift, and go to state 56
    LOGICALNOT  shift, and go to state 57
    BOOLCONST   shift, and go to state 61
    INTCONST    shift, and go to state 62

    alr_subexpression   go to state 113
    var_use             go to state 70
    supported_constant  go to state 71


State 95

   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression
   53                  | error EQ alr_subexpression .

    ARITH    shift, and go to state 89
    RELN     shift, and go to state 90
    LOGICAL  shift, and go to state 91

    ARITH     [reduce using rule 53 (alr_subexpression)]
    RELN      [reduce using rule 53 (alr_subexpression)]
    LOGICAL   [reduce using rule 53 (alr_subexpression)]
    $default  reduce using rule 53 (alr_subexpression)


State 96

   59 id_list: error . COMMA id_list

    COMMA  shift, and go to state 114


State 97

   62 var_use: ID .
   63        | ID . OPENSQUARE INTCONST CLOSESQUARE

    OPENSQUARE  shift, and go to state 74

    $default  reduce using rule 62 (var_use)


State 98

   46 alr_subexpression: ID OPENPAREN id_list . CLOSEPAREN

    CLOSEPAREN  shift, and go to state 115


State 99

   56 id_list: var_use . COMMA id_list
   57        | var_use .

    COMMA  shift, and go to state 116

    $default  reduce using rule 57 (id_list)


State 100

   63 var_use: ID OPENSQUARE INTCONST . CLOSESQUARE

    CLOSESQUARE  shift, and go to state 117


State 101

   47 alr_subexpression: OPENPAREN alr_subexpression CLOSEPAREN .

    $default  reduce using rule 47 (alr_subexpression)


State 102

   66 supported_constant: OPENNEGATE INTCONST CLOSEPAREN .

    $default  reduce using rule 66 (supported_constant)


State 103

   49 alr_subexpression: OPENNEGATE alr_subexpression CLOSEPAREN .

    $default  reduce using rule 49 (alr_subexpression)


State 104

   35 if_statement: IF OPENPAREN alr_subexpression . CLOSEPAREN statement_block else_statement
   48 alr_subexpression: alr_subexpression . ARITH alr_subexpression
   50                  | alr_subexpression . RELN alr_subexpression
   51                  | alr_subexpression . LOGICAL alr_subexpression
